--- a/package.json
+++ b/package.json
@@ -7,14 +7,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.23",
-    "@types/react": "^17.0.19",
-    "@types/react-dom": "^17.0.9",
     "firebase": "^9.5.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.4",
     "react-player": "^2.9.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.4.2",
@@ -46,6 +43,11 @@
     ]
   },
   "devDependencies": {
+    "@types/react-modal": "^3.13.1",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^12.20.23",
+    "@types/react": "^17.0.19",
+    "@types/react-dom": "^17.0.9",
     "gh-pages": "^3.2.3"
   }
 }
