--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-modal": "^3.14.4",
     "react-player": "^2.9.0",
     "react-scripts": "4.0.3",
+    "sweetalert2": "^11.3.3",
     "typescript": "^4.4.2",
     "web-vitals": "^1.1.2"
   },
@@ -43,11 +44,11 @@
     ]
   },
   "devDependencies": {
-    "@types/react-modal": "^3.13.1",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.23",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
+    "@types/react-modal": "^3.13.1",
     "gh-pages": "^3.2.3"
   }
 }
