--- a/package.json
+++ b/package.json
@@ -5,18 +5,18 @@
   "private": true,
   "dependencies": {
     "firebase": "^9.5.0",
-    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.4",
     "react-player": "^2.9.0",
     "react-scripts": "4.0.3",
+    "sass": "^1.56.1",
     "sweetalert2": "^11.3.3",
     "typescript": "^4.4.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
